styling: fix too large font-size issue

--- a/05-travel-list/travel-list/src/index.css
+++ b/05-travel-list/travel-list/src/index.css
@@ -124,6 +124,10 @@ input[type="checkbox"] {
   transform: translateY(2px);
 }
 
+.list li span {
+  font-size: 1.8rem;
+}
+
 .stats {
   background-color: #76c7ad;
   text-align: center;
